syntax = "proto3";

package proto.shortener;

option go_package = "github.com/romanp1989/go-shortener/internal/grpc/proto/shortener";

import "proto/shortener/entity.proto";

message ResponseEncode {
  string short_url = 1;
}

message ResponseDecode {
  string result = 1;
}

message ResponseShorten {
  string result = 1;
}

message ResponseSaveBatch {
  repeated Item items = 1;
}

message ResponseGetUserURL {
  repeated UserURL items = 1;
}

message ResponseGetStats {
  int64 urls = 1;
  int64 users = 2;
}